# logging518

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test_matrix.yml
docs/: index.md
logging518/: __init__.py  config.py  logger518.py  main.py
tests/: test_logging518.py  test_logging_config.py
tests/fixtures/: example_fail.toml  example_success.toml
tests/mock/: failure.toml  missing_logging_in_tool_table.toml  missing_tool_table.toml  success.toml
