[tool.poetry]
name = "logging518"
version = "0.2.2"
description = "Configure Python's native logging module using pyproject.toml"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mharrisb1/logging518"
authors = ["Michael Harris <michael.harrisru@gmail.com>"]
exclude = [".devcontainer/", ".github"]

[tool.poetry.dependencies]
python = "^3.6.2"
toml = "^0.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.6b0"
mypy = "^0.942"
pytest-mypy = "^0.9.1"
types-toml = "^0.10.4"

[tool.pytest.ini_options]
addopts = "--mypy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
