[tool.poetry]
name = "logging518"
version = "0.2.2"
description = "Configure Python's native logging module using pyproject.toml"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mharrisb1/logging518"
authors = ["Michael Harris <michael.harrisru@gmail.com>"]
exclude = [".devcontainer/", ".github/"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
