[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "logging518"
version = "0.2.2"
description = "Configure Python's native logging module using pyproject.toml"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mharrisb1/logging518"
authors = ["Michael Harris <michael.harrisru@gmail.com>"]
exclude = [".devcontainer/", ".github/"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2"
pre-commit = "^2.18.1"
mypy = "^0.942"

[tool.black]
line-length = 88
target-version = ['py38']  # Specify your Python version
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
)/
'''
